Adding new endpoint for retrieving a list of rule IDs
