# openapi.json
@@ -117,6 +117,33 @@
           }
         }
       }
+    },
+    "/rules": {
+      "get": {
+        "summary": "Returns the rule IDs of all the rules.",
+        "operationId": "getRuleNames",
+        "responses": {
+          "200": {
+            "description": "A JSON array of all the rule IDs.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "rules": {
+                      "type": "string"
+                    },
+                    "status": {
+                      "type": "string",
+                      "example": "ok"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
