# server/handlers.go
@@ -87,3 +87,13 @@ func (server HTTPServer) getStaticContent(writer http.ResponseWriter, request *h
 		return
 	}
 }
+
+// getRuleNames returns a list of the names of the rules
+func (server HTTPServer) getRuleNames(writer http.ResponseWriter, request *http.Request) {
+	ruleNames := make([]string, 0, len(server.Content.Rules))
+	for _, ruleContent := range server.Content.Rules {
+		ruleNames = append(ruleNames, ruleContent.Plugin.PythonModule)
+	}
+
+	responses.SendOK(writer, responses.BuildOkResponseWithData("rules", ruleNames))
+}
